Added Email SMTP

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 VITE_API_URL=http://localhost:5000/api
+
+# EmailJS Configuration
+VITE_EMAILJS_SERVICE_ID=service_bza67e5
+VITE_EMAILJS_TEMPLATE_ID=template_bas8cns
+VITE_EMAILJS_PUBLIC_KEY=kbPMR7nHE6j_BRujb
